[DEV] Message accueil

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,7 @@
 
 </head>
 <body>
-    <h1> Salut charles </h1>
-    <p> bonne année</p>
+    <h1> TEST </h1>
 
     <form action="" method="post">
         <label> username : </label><input name="username"></input>
@@ -24,7 +23,6 @@
                 {{user.email}}
             </li>
     {% endfor %}
-
     <br>
     <div>
         passe ta souris
